--- a/hero.css
+++ b/hero.css
@@ -12,17 +12,7 @@
   text-align: center;
   color: white;
 }
-.hero-text .hero-img{
 
-}
-.hero-text .hero-content{
-  
-}
-.hero-text{
-  
-
-    
-}
 .hero-content h3, h4{
     margin-top:15px;
 }
@@ -44,10 +34,11 @@
 }
 .carosoul{
         position: relative;
-        height: 400px;
+        height: 30rem;
         margin-bottom: 40px;
       
     }
+
 @media (min-width:780px) {
     .carosoul{
         margin: auto 12% 40px; 
@@ -62,32 +53,21 @@
       .swiper-slide {
         background-position: center;
         background-size: cover;
-        width: 300px;
-        height: 350px;
+        width: 21rem;
+        height: 27rem;
         background-color: white;
-        box-shadow: 0px 15px 50px rgba(90, 90, 194, 0.609);
+        box-shadow: 0px 15px 25px rgba(90, 90, 194, 0.609);
         
         border-radius: 15px;
       }
-
-      .swiper-slide img {
-        display: inline-block;
-        width:auto;
-        height: 160px;
-        
-      }
-      .caro-card .caro-img{
-        
-       display: flex;
-       justify-content: center;
-       align-items: center;
-      }
-      .caro-content{
-          padding: 2px 30px;
-      }
-      .caro-content h3{
-          margin: 16px auto;
-      }
+     .caro-card{
+         width: 95%;
+         height: 97%;
+         margin: auto;
+         overflow: hidden;
+     }
+     
+     
       .swiper-3d .swiper-slide-shadow-left {
         background-image: none;
     }
